fix overflow; create border around main-container; remove section; adjust colour swatch dimensions; add border-bottom to .tools; update justify style .tools

--- a/04-sketch/styles-sketch.css
+++ b/04-sketch/styles-sketch.css
@@ -9,17 +9,17 @@ body {
   font-family: Poppins, sans-serif;
   background-color: #fefae0;
   color: #474e7b;
+  overflow: hidden;
 }
 
 .main-container {
-  border: 2px solid red;
+  border: 15px solid #f2eecf;
   height: 100vh;
   width: 80%;
   margin: 0 auto;
 }
 
 section {
-  border: 2px solid yellow;
 }
 
 .header-section,
@@ -29,7 +29,6 @@ section {
 
 /* header section */
 h1 {
-  border: 2px solid red;
   font-size: 2.5rem;
   font-weight: bold;
   letter-spacing: 5px;
@@ -58,28 +57,28 @@ h1 {
   flex-wrap: wrap;
   border: 4px solid #867070;
   height: 70%;
-  width: 50%;
+  width: 45%;
   margin: 0 auto;
 }
 
 .tools {
-  border: 2px solid red;
-  height: 15%;
-  width: 80%;
+  height: 16%;
+  width: 60%;
   margin: 0 auto;
+  margin-bottom: 1%;
+  border-bottom: 4px solid #d5b4b4;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 5%;
 }
 
 #colour-picker {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 8%;
-  height: 80%;
+  width: 10%;
+  height: 70%;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -90,7 +89,7 @@ h1 {
   font-weight: 550;
   color: #474e7b;
   width: auto;
-  height: 80%;
+  height: 60%;
   padding: 0.5% 2%;
   border-radius: 15px;
   border: 4px solid #d5b4b4;
@@ -149,7 +148,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 20px;
   width: 20px;
   background-color: rbg(175, 175, 14);
-  border: 2px solid #867070;
+  border: 4px solid #867070;
   cursor: pointer;
 }
 
@@ -173,7 +172,7 @@ input[type="range"]::-ms-thumb {
 
 input[type="range"]:active::-webkit-slider-thumb {
   background-color: #ffffff;
-  border: 4px solid #867070;
+  border: 3px solid #867070;
 }
 
 /* footer section */
@@ -181,7 +180,6 @@ input[type="range"]:active::-webkit-slider-thumb {
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
-  border: 2px solid red;
   margin-top: 1.5%;
 }
 
